--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -62,6 +62,7 @@ endfunction()
 #   add_unit_test(gb_CPU ${PROJECT_SOURCE_DIR}/src/gb/CPU.cpp
               # ${PROJECT_SOURCE_DIR}/src/gb/Bus.cpp)
 
+add_unit_test(CVar)
 add_unit_test(defer)
 add_unit_test(Injector ${PROJECT_SOURCE_DIR}/src/mgfw/Injector.cpp)
 add_unit_test(events) # Tests MessageQueue, EventReader, EventWriter
